<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SplashScreenFragment"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/linear_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_logo_splash_screen"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/font_medium"
            android:includeFontPadding="false"
            android:text="@string/title_splash"
            android:layout_marginTop="24dp"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/font_medium"
            android:includeFontPadding="false"
            android:text="@string/description_splash"
            android:layout_marginTop="8dp"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color_red"
            android:fontFamily="@font/font_medium"
            android:includeFontPadding="false"
            android:lineSpacingExtra="4sp"
            android:layout_marginTop="40dp"
            android:paddingHorizontal="16dp"
            android:layout_marginHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/button_text_splash"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            android:contentDescription=""/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>