<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title_main_menu"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stroke_color_black"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main_information"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/font_medium"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/title_main_menu_info"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/font_medium"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/description_main_menu_info"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_medium"
            android:gravity="start"
            android:includeFontPadding="false"
            android:text="@string/title_lessons"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="32dp"/>

        <LinearLayout
            android:id="@+id/linear_avialiable_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main_information"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_home"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/font_medium"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:text="@string/title_lesson_one"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/font_medium"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:text="@string/description_lesson_one"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_angle_right"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_levels"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main_touch"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_touch"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/font_medium"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/off_touch_vision"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>
    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>