<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OnBoardingFragment"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:gravity="end"
            android:includeFontPadding="false"
            android:text="@string/ready_onboarding"
            android:textColor="@color/text_button"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:visibility="invisible"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title_main_menu"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/button_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:gravity="end"
            android:includeFontPadding="false"
            android:text="@string/ready_onboarding"
            android:textColor="@color/text_button"
            android:textSize="14sp"
            android:layout_marginEnd="16dp" />

</LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stroke_color_black"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/text_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/font_medium"
            android:gravity="start"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Контекст экрана" />

        <TextView
            android:id="@+id/text_description_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font_medium"
            android:gravity="start"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="При переходе на каждый новый экран TouchVision будет напоминать какое это приложение и расскажет контекст текущего экрана, например, как при переходе на этот экран «Приложение TouchVision. Экран Обучение TouchVision. Основы взаимодействия» " />

        <TextView
            android:id="@+id/text_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_medium"
            android:gravity="start"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Диалог с ассистентом" />

        <TextView
            android:id="@+id/text_description_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font_medium"
            android:gravity="start"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="На экранах с множеством действий, TouchVision будет предлагать вам разные варианты, и комбинацию жестов, которые нужно сделать, чтобы совершить какой-то вариант. Например, на этом экране сделайте двойной тап в любой области экрана, чтобы перейти дальше. Чтобы вернуться на главную, сделайте свайп от правого края к левому" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_task"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/back_pink_task"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/info_task_back"
            android:layout_marginHorizontal="46dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/text_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/font_medium"
                android:gravity="start"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Теперь смахните одним пальцем справа налево, чтобы вернуться к предыдущему элементу" />


        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="68dp"
        android:backgroundTint="@color/main_color_red"
        android:contentDescription=""
        android:fontFamily="@font/font_medium"
        android:includeFontPadding="false"
        android:lineSpacingExtra="4sp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:text="@string/next_button"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/font_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/to_main"
        android:textColor="@color/main_color_red"
        android:layout_marginHorizontal="68dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>